[gd_scene load_steps=7 format=3 uid="uid://p825y5vcbbjl"]

[ext_resource type="Script" uid="uid://drrunqqj3ru4" path="res://scripts/bullet.gd" id="1_5iash"]
[ext_resource type="Texture2D" uid="uid://b4l3m7qde4y17" path="res://sprite/circle.png" id="1_6q1sf"]
[ext_resource type="AudioStream" uid="uid://dxv3hvb1rmqxb" path="res://sounds/shoot.mp3" id="3_h4vll"]

[sub_resource type="Gradient" id="Gradient_5iash"]
offsets = PackedFloat32Array(0.305195, 0.461039, 0.551948)
colors = PackedColorArray(0.909091, 0.909091, 0.909091, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h4vll"]
gradient = SubResource("Gradient_5iash")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_5iash"]
radius = 196.218

[node name="Node2D" type="Node2D"]
z_index = -1
script = ExtResource("1_5iash")

[node name="Circle" type="Sprite2D" parent="."]
scale = Vector2(0.031, 0.031)
texture = ExtResource("1_6q1sf")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Circle"]
scale = Vector2(32.2581, 32.2581)
enable_node_path = NodePath("../..")

[node name="PointLight2D" type="PointLight2D" parent="Circle"]
energy = 10.0
texture = SubResource("GradientTexture2D_h4vll")

[node name="Area2D" type="Area2D" parent="Circle" groups=["bullets"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Circle/Area2D"]
shape = SubResource("CircleShape2D_5iash")

[node name="AudioListener2D" type="AudioListener2D" parent="Circle"]
current = true

[node name="Shoot" type="AudioStreamPlayer" parent="Circle/AudioListener2D"]
stream = ExtResource("3_h4vll")
volume_db = -20.0

[node name="Timer" type="Timer" parent="Circle"]
wait_time = 5.0
autostart = true

[connection signal="screen_exited" from="Circle/VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="area_entered" from="Circle/Area2D" to="." method="deu_dano"]
[connection signal="timeout" from="Circle/Timer" to="." method="_on_timer_timeout"]
